tests/snapshots/ui_snapshots__dashboard_findings_tab_with_data.snap
---
source: tests/ui_snapshots.rs
expression: render(&app)
---
"                            │   live   findings   history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │                                                             "
"  ○ plan                    │   CRIT   ◆both  src/state.rs:42 Race in state save      "
"  ○ plan-review             │    two writers [dual-review:confirmed]                      "
"  ○ tests-red               │    ▏ let st = load(&path)?; // no lock …                    "
"  ○ implement               │                                                             "
"  ○ dual-review             │   minr  ◇single src/x.rs:7 Long line                      "
"                            │    style-ish [dual-review:unconfirmed]                      "
" 󰚩 AGENTS ───────────────── │                                                             "
"  󰚩 claude …                │                                                             "
"  󰚩 codex …                 │                                                             "
"  󱘖 bridge …                │                                                             "
"   nvim —                   │                                                             "
"   check ?                  │                                                             "
"                            │                                                             "
"   detached                 │                                                             "
"                            │                                                             "
"                            │                                                             "
"                            │                                                             "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
