tests/snapshots/ui_snapshots__dashboard_findings_tab_with_resolved_shown.snap
---
source: tests/ui_snapshots.rs
assertion_line: 142
expression: render(&app)
---
"                            │   live   findings   history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │                                                             "
"  ○ plan                    │   CRIT   ◆both  src/a.rs:3 Open bug                →⚑M  "
"  ○ plan-review             │    boom [dual-review:confirmed]                             "
"  ○ tests-red               │                                                             "
"  ○ implement               │   MAJR  ◇single src/b.rs:9 Was fixed             ✓ fixed  "
"  ○ dual-review             │    [dual-review:confirmed]                                  "
"  ○ coverage                │                                                             "
"  » next: spec              │   minr  ◇single  Noise                       ∅ dismissed  "
"                            │    [dual-review:unconfirmed]                                "
" 󰚩 AGENTS ───────────────── │                                                             "
"  󰚩 claude …                │                                                             "
"  󰚩 codex …                 │                                                             "
"  󱘖 bridge …                │                                                             "
"   nvim …                   │                                                             "
"   check ?                  │                                                             "
"                            │                                                             "
"   detached                 │                                                             "
"                            │                                                             "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
