tests/snapshots/ui_snapshots__dashboard_guide_tab_renders.snap
---
source: tests/ui_snapshots.rs
assertion_line: 412
expression: render(&app)
---
"                            │   live    findings    history    plan   guide             "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │ 󰲣 Why this shape                                     5/257  "
"  ○ plan                    │                                                             "
"  ○ plan-review             │ Research verdict behind the workflow: external feedback     "
"  ○ tests-red               │ (tests, execution, checks) is the quality engine, not model "
"  ○ implement               │ debate. A second model pays off in exactly three roles:     "
"  ○ dual-review             │ plan critic, independent test designer, and second          "
"  ○ coverage                │ reviewer. That is the pipeline.                             "
"                            │                                                             "
" 󰚩 AGENTS ───────────────── │ 󰲣 The pipeline                                              "
"  󰚩 claude …                │                                                             "
"  󰚩 codex …                 │  • spec: you write intent in  spec.md  ( ⟨enter⟩  opens it  "
"  󱘖 bridge …                │ in $EDITOR; or press  ⟨s⟩  to chat it into shape, see       "
"   nvim …                   │ below)                                                      "
"   check ?                  │  • plan: Claude drafts  plan.md  from the spec              "
"                            │  • plan-review: Codex attacks the plan; bounded 2-round     "
"   detached                 │ debate; plan revised in place                               "
"                            │  • tests-red: Codex designs tests from the spec, written    "
"                            │ red, no implementation                                      "
"                            │  • implement: Claude implements until  check.sh  is green   "
" RITUAL   detached  detached                                                          "
