tests/snapshots/ui_snapshots__dashboard_help_overlay.snap
---
source: tests/ui_snapshots.rs
expression: render(&app)
---
"                      ╭ keys ──────────────────────────────────────╮   guide              "
"  PIPELINE ───────────│                                            │──────────────────────"
"  ○ spec              │ navigate                                   │                      "
"  ○ plan              │   j/k  move                                │                      "
"  ○ plan-review       │   [ ]  cycle features                      │▄▄                    "
"  ○ tests-red         │   tab 1-5  panes                           │  v e r i f y         "
"  ○ implement         │   g/G  top / follow                        │                      "
"  ○ dual-review       │                                            │ → impl → dual        "
"  ○ coverage          │ run                                        │ec or plan live       "
"                      │   enter  run stage / open                  │ch · a takeover       "
" 󰚩 AGENTS ────────────│   s  chat: edit spec/plan                  │ d dismiss · / filter "
"  󰚩 claude …          │   a  take over session                     │· invariants          "
"  󰚩 codex …           │   x  cancel run                            │· costs               "
"  󱘖 bridge …          │   c/C  check fast / full                   │ · repro              "
"   nvim …             │                                            │ codes                "
"   check ?            │ findings                                   │features              "
"                      │   enter  details                           │ · pr-comment         "
"   detached           │   f  mark fixed (toggle)                   │, in-app              "
"                      │   d  dismiss (+reason)                     │                      "
"                      │   F  queue/apply claude answers            │?  keys    q  quit    "
"                      │   A  queue all code fixes                  │                      "
" RITUAL   detached ╰────────────────────────────────────────────╯                      "
