tests/snapshots/ui_snapshots__dashboard_help_overlay_finding_detail.snap
---
source: tests/ui_snapshots.rs
assertion_line: 210
expression: render(&app)
---
"                            │   live   findings   history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○╭ finding ─────────────────────────────────────────────────────────────────────────╮   "
"  ○│x                      ╭ keys ───────────────────────────╮                        │M  "
"  ○│ MAJR  ◇single  claud│  finding                        │                        │   "
"  ○│src/a.rs:1             │   f  finding: mark fixed        │                        │   "
"  ○│recommended: fix manual│   d  finding: dismiss           │                        │   "
"  ○│                       │   F  queue/apply claude answer  │                        │   "
"  ○│s                      │   m  finding: queue manual fix  │                        │   "
"   │                       │   u  undo last plan fix         │                        │   "
" 󰚩 │                       │   o  open in running nvim       │                        │   "
"  󰚩│                       │   e  open in $EDITOR            │                        │   "
"  󰚩│                       │   esc/q/enter  close            │                        │   "
"  󱘖│                       │                                 │                        │   "
"   │                       │  move                           │                        │   "
"   │                       │   k / ↑  move up                │                        │   "
"   │                       │   j / ↓  move down              │                        │   "
"   │                       ╰─────────────────────────────────╯                        │   "
"   │ f  fix   d  dismiss…   F  queue code-fix   m  manual   o  nvim   e  editor   j/k │   "
"   ╰──────────────────────────────────────────────────────────────────────────────────╯   "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
