tests/snapshots/ui_snapshots__dashboard_help_overlay_guide.snap
---
source: tests/ui_snapshots.rs
assertion_line: 190
expression: render(&app)
---
"                            │   live    findings    history    plan   guide             "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○╭ keys ───────────────────────────────────────────────────────────────────────────╮57  "
"  ○│  guide                                              global                      │    "
"  ○│   enter  run stage / open item                       ctrl+c / q  quit ritual    │ →  "
"  ○│                                                      ?  show help               │ps  "
"  ○│  actions                                             :  command palette         │    "
"  ○│   i  stage: details & guidance                       tab  next tab              │    "
"  ○│   x  cancel running stage                            1-5  jump to tab           │    "
"  »│   c  run check.sh fast                               r  refresh auth/artifacts  │    "
"  a│   C  run full check.sh                               S  settings: edit config   │    "
"   │   a  take over in claude                                                        │del "
"   │   s  chat: edit spec/plan                           move                        │    "
"   │   :  refresh the architecture map (palette-only)     k / ↑  move up             │    "
" 󰚩 │   u  undo last plan fix                              j / ↓  move down           │    "
"  󰚩│   Q  findings → nvim quickfix                        g  scroll to top           │    "
"  󰚩│                                                      G  jump to end/tail        │    "
"  󱘖│                                                      [  previous feature        │    "
"   │                                                      ]  next feature            │it  "
"   ╰─────────────────────────────────────────────────────────────────────────────────╯    "
"                            │ below)                                                      "
" RITUAL   detached  detached                                                          "
