tests/snapshots/ui_snapshots__dashboard_help_overlay_history.snap
---
source: tests/ui_snapshots.rs
assertion_line: 179
expression: render(&app)
---
"                            │   live    findings   history   plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec    ╭ keys ─────────────────────────────────────────────────────────╮             "
"  ○ plan    │  history                          global                      │             "
"  ○ plan-rev│   enter  run stage / open item     ctrl+c / q  quit ritual    │             "
"  ○ tests-re│   /  filter findings/history       ?  show help               │             "
"  ○ implemen│                                    :  command palette         │             "
"  ○ dual-rev│  actions                           tab  next tab              │             "
"  ○ coverage│   x  cancel running stage          1-5  jump to tab           │             "
"  » next: sp│   c  run check.sh fast             r  refresh auth/artifacts  │             "
"            │   C  run full check.sh             S  settings: edit config   │             "
" 󰚩 AGENTS ──│   a  take over in claude                                      │             "
"  󰚩 claude …│   s  chat: edit spec/plan         move                        │             "
"  󰚩 codex … │   u  undo last plan fix            k / ↑  move up             │             "
"  󱘖 bridge …│   Q  findings → nvim quickfix      j / ↓  move down           │             "
"   nvim …   │                                    g  scroll to top           │             "
"   check ?  │                                    G  jump to end/tail        │             "
"            │                                    [  previous feature        │             "
"   detached │                                    ]  next feature            │             "
"            ╰───────────────────────────────────────────────────────────────╯             "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
