tests/snapshots/ui_snapshots__dashboard_help_overlay_plan.snap
---
source: tests/ui_snapshots.rs
assertion_line: 170
expression: render(&app)
---
"                            │   live    findings    history   plan   guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ ╭ keys ──────────────────────────────────────────────────────────────────────────╮    "
"  ○ │  plan                                              global                      │    "
"  ○ │   enter  run stage / open item                      ctrl+c / q  quit ritual    │    "
"  ○ │   :  reset plan back to the spec (palette-only)     ?  show help               │    "
"  ○ │                                                     :  command palette         │    "
"  ○ │  actions                                            tab  next tab              │    "
"  ○ │   x  cancel running stage                           1-5  jump to tab           │    "
"    │   c  run check.sh fast                              r  refresh auth/artifacts  │    "
" 󰚩 A│   C  run full check.sh                              S  settings: edit config   │    "
"  󰚩 │   a  take over in claude                                                       │    "
"  󰚩 │   s  chat: edit spec/plan                          move                        │    "
"  󱘖 │   u  undo last plan fix                             k / ↑  move up             │    "
"   n│   Q  findings → nvim quickfix                       j / ↓  move down           │    "
"   c│                                                     g  scroll to top           │    "
"    │                                                     G  jump to end/tail        │    "
"   d│                                                     [  previous feature        │    "
"    │                                                     ]  next feature            │    "
"    ╰────────────────────────────────────────────────────────────────────────────────╯    "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
