tests/snapshots/ui_snapshots__dashboard_history_scrolled_to_bottom.snap
---
source: tests/ui_snapshots.rs
assertion_line: 534
expression: out
---
"                            │   live    findings   history   plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │                                                             "
"  ○ plan                    │   07-12 00:17  run-17                  $0.100               "
"  ○ plan-review             │   07-12 00:16  run-16                  $0.100               "
"  ○ tests-red               │   07-12 00:15  run-15                  $0.100               "
"  ○ implement               │   07-12 00:14  run-14                  $0.100               "
"  ○ dual-review             │   07-12 00:13  run-13                  $0.100               "
"  ○ coverage                │   07-12 00:12  run-12                  $0.100               "
"  » next: spec              │   07-12 00:11  run-11                  $0.100               "
"                            │   07-12 00:10  run-10                  $0.100               "
" 󰚩 AGENTS ───────────────── │   07-12 00:09  run-09                  $0.100               "
"  󰚩 claude …                │   07-12 00:08  run-08                  $0.100               "
"  󰚩 codex …                 │   07-12 00:07  run-07                  $0.100               "
"  󱘖 bridge …                │   07-12 00:06  run-06                  $0.100               "
"   nvim …                   │   07-12 00:05  run-05                  $0.100               "
"   check ?                  │   07-12 00:04  run-04                  $0.100               "
"                            │   07-12 00:03  run-03                  $0.100               "
"   detached                 │   07-12 00:02  run-02                  $0.100               "
"                            │   07-12 00:01  run-01                  $0.100               "
"                            │   07-12 00:00  run-00                  $0.100               "
" RITUAL   detached  detached                                             ████████████ "
