tests/snapshots/ui_snapshots__dashboard_implement_hint.snap
---
source: tests/ui_snapshots.rs
expression: "render_at(&app, 90, 24)"
---
"                            │  live   findings    history    plan    guide              "
"  PIPELINE ──────────────── │─────────────────────────────────────────────────────────────"
"  ○ spec                    │                                                             "
"  ○ plan                    │                                                             "
"  ○ plan-review             │                    █▀█ █ ▀█▀ █ █ ▄▀█ █                      "
"  ○ tests-re╭ implement - resume + paste to start ───────────────────────────╮            "
"  ○ implemen│                                                                │f y         "
"  ○ dual-rev│  The tests-red session reopens with its full context.          │            "
"            │  ✓ the implement instruction is on your clipboard.             │dual        "
" 󰚩 AGENTS ──│                                                                │ live       "
"  󰚩 claude …│  Press [enter] to open it, then paste (Ctrl+Shift+V /          │eover       "
"  󰚩 codex … │middle-click).                                                  │ · / filter "
"  󱘖 bridge …│                                                                │ts          "
"   nvim …   │  [enter] open    [c] copy again    [esc] cancel                │            "
"   check ?  │                                                                │            "
"            │                                                                │            "
"   detached │                                                                │            "
"            ╰────────────────────────────────────────────────────────────────╯ent         "
"                            │    guide  5: the detailed guide & tips, in-app              "
"                            │                                                             "
"                            │     enter  run stage    :  palette    ?  keys    q  quit    "
"                            │                                                             "
"                            │                                                             "
" RITUAL   detached  detached                                                          "
